# FastRodReconstruction

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  multi_topic_listener.py  pyproject.toml
data_parsing/: template_ros2bag_parsing.py
examples/: create_reconstruction_node.py  create_training_set.py  create_training_set_octopus.py  launch_hdf5_recording.py  launch_reconstruction_node.py  model_eval.py  model_eval_octopus.py  reconstruction_model.py  reconstruction_node.py  run_PCA_br2.py  run_PCA_octopus.py  run_training.py  run_training_octopus.py
examples/br2/: create_training_set.py  model_eval.py  read_h5_data.py  run_PCA_br2.py  run_training.py
examples/octopus/: create_training_set_octopus.py  file_global.py  model_eval_octopus.py  run_PCA_octopus.py  run_training_octopus.py  time_trajectory_eval.py
examples/ros2_vicon/: experiment_setting.py  launch_hdf5_node.py  launch_reconstruction_node.py  reconstruction_model.py
neural_data_smoothing/: NN_model.py  create_data_set.py  create_training_data.py  model_eval.py  run_PCA.py  utils.py
neural_data_smoothing/Data/: original_data_set.npy  training_data0.npy  training_data1.npy  training_data10.npy  training_data11.npy  training_data2.npy  training_data3.npy  training_data4.npy  training_data5.npy  training_data6.npy  training_data7.npy  training_data8.npy  training_data9.npy  training_data_set.npy
neural_data_smoothing/Data/model/: V_smoothing_model_chi1e4.pt
neural_data_smoothing2D/: NN_model.py  create_training_data.py  model_eval.py  run_PCA.py  utils.py
neural_data_smoothing3D/: NN_model.py  __init__.py  create_training_data.py  model_eval.py  run_PCA.py  update_marker_position.py  utils.py
neural_data_smoothing3D/Data/Model/: data_smoothing_model_br2_4markers.pt  data_smoothing_model_br2_BS128.pt
reconstruction/: __init__.py  model.py  result.py
ros2-vicon/: multi_topic_listener.py  reconstruction_node.py
ros2_vicon/: __init__.py  publisher.py  subscriber.py
src/assets/: __init__.py  data_smoothing_model_br2.pt  data_smoothing_model_br2_3markers.pt  data_smoothing_model_br2_3markers_bending.pt  data_smoothing_model_br2_3markers_old.pt  data_smoothing_model_br2_3markers_tipWeight.pt  data_smoothing_model_br2_4markers.pt  data_smoothing_model_br2_4markers_with_noise.pt  data_smoothing_model_br2_6markers.pt  data_smoothing_model_octopus.pt  data_smoothing_model_octopus_no_noise.pt  data_smoothing_model_octopus_with_noise.pt
src/neural_data_smoothing2D/: NN_model.py  create_training_data.py  model_eval.py  run_PCA.py  utils.py
src/neural_data_smoothing2D/Data/: fake_br2_arm_data1.npy
src/neural_data_smoothing2D/Data/model/: mini_batch_model_br2.pt
src/neural_data_smoothing3D/: NN_model.py  __init__.py  create_training_data.py  my_PCA.py  run_PCA.py  update_marker_position.py  utils.py
src/neural_data_smoothing3D_full/: NN_model.py  my_PCA.py  update_marker_position.py  utils.py
src/neural_data_smoothing3D_old/: __init__.py  model_eval.py  utils.py
src/reconstruction/: __init__.py  model.py  result.py
src/ros2_vicon/: __init__.py  pose.py  publisher.py  qos.py  subscriber.py  timer.py
src/ros2_vicon/filter/: __init__.py  pose_filter.py
src/ros2_vicon/message/: array.py  pose.py  vicon.py
src/ros2_vicon/node/: __init__.py  logger_node.py  publisher.py  stage_node.py  subscriber.py  timer.py  writer.py
